Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5878

Failing assertion: mutex_own(mutex) with innodb_use_fallocate=ON

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.9
    • 10.0.10
    • None
    • None
    • Linux wheezy-64 3.2.0-4-amd64 #1 SMP Debian 3.2.35-2 x86_64 GNU/Linux, ext3

    Description

      Start server with --innodb_use_fallocate=ON.
      Do anything, e.g. create table t1 (i int).

      InnoDB: Assertion failure in thread 140385167947520 in file sync0sync.ic line 166
      InnoDB: Failing assertion: mutex_own(mutex)

      #5  0x00007fadf61ac6f0 in *__GI_abort () at abort.c:92
      #6  0x0000000000d86b7b in mutex_exit_func (mutex=0x7fadf582e678) at 10.0/storage/xtradb/include/sync0sync.ic:166
      #7  0x0000000000d86d87 in pfs_mutex_exit_func (mutex=0x7fadf582e678) at 10.0/storage/xtradb/include/sync0sync.ic:475
      #8  0x0000000000d9100c in fil_extend_space_to_desired_size (actual_size=0x7fadf810e1a8, space_id=4, size_after_extend=6) at 10.0/storage/xtradb/fil/fil0fil.cc:4941
      #9  0x0000000000d98532 in fsp_try_extend_data_file_with_pages (space=4, page_no=5, header=0x7fade0980026 "", mtr=0x7fadf810e540) at 10.0/storage/xtradb/fsp/fsp0fsp.cc:914
      #10 0x0000000000d9c5a6 in fsp_reserve_free_pages (space=4, space_header=0x7fade0980026 "", size=4, mtr=0x7fadf810e540) at 10.0/storage/xtradb/fsp/fsp0fsp.cc:2712
      #11 0x0000000000d9c6d7 in fsp_reserve_free_extents (n_reserved=0x7fadf810e328, space=4, n_ext=2, alloc_type=1000000, mtr=0x7fadf810e540) at 10.0/storage/xtradb/fsp/fsp0fsp.cc:2781
      #12 0x0000000000d9aeb1 in fseg_create_general (space=4, page=3, byte_offset=74, has_done_reservation=0, mtr=0x7fadf810e540) at 10.0/storage/xtradb/fsp/fsp0fsp.cc:2079
      #13 0x0000000000d9b200 in fseg_create (space=4, page=3, byte_offset=74, mtr=0x7fadf810e540) at 10.0/storage/xtradb/fsp/fsp0fsp.cc:2167
      #14 0x0000000000cf8d53 in btr_create (type=1, space=4, zip_size=0, index_id=20, index=0x7fadc98a4278, mtr=0x7fadf810e540) at 10.0/storage/xtradb/btr/btr0btr.cc:1628
      #15 0x0000000000d559e5 in dict_create_index_tree_step (node=0x7fadc98a3af8) at 10.0/storage/xtradb/dict/dict0crea.cc:693
      #16 0x0000000000d56851 in dict_create_index_step (thr=0x7fadc98d0780) at 10.0/storage/xtradb/dict/dict0crea.cc:1192
      #17 0x0000000000c1b944 in que_thr_step (thr=0x7fadc98d0780) at 10.0/storage/xtradb/que/que0que.cc:1125
      #18 0x0000000000c1bac2 in que_run_threads_low (thr=0x7fadc98d0780) at 10.0/storage/xtradb/que/que0que.cc:1177
      #19 0x0000000000c1bc54 in que_run_threads (thr=0x7fadc98d0780) at 10.0/storage/xtradb/que/que0que.cc:1218
      #20 0x0000000000c5d250 in row_create_index_for_mysql (index=0x7fadc98a35f8, trx=0x7fadc98cfa78, field_lengths=0x0) at 10.0/storage/xtradb/row/row0mysql.cc:2447
      #21 0x0000000000b6e5ee in create_clustered_index_when_no_primary (trx=0x7fadc98cfa78, flags=1, table_name=0x7fadf810ec80 "test/t1") at 10.0/storage/xtradb/handler/ha_innodb.cc:9708
      #22 0x0000000000b6f864 in ha_innobase::create (this=0x7fadc98c6088, name=0x7fadf8111880 "./test/t1", form=0x7fadf810fb90, create_info=0x7fadf8111cb0) at 10.0/storage/xtradb/handler/ha_innodb.cc:10412
      #23 0x00000000008639ce in handler::ha_create (this=0x7fadc98c6088, name=0x7fadf8111880 "./test/t1", form=0x7fadf810fb90, info=0x7fadf8111cb0) at 10.0/sql/handler.cc:4244
      #24 0x00000000008648ab in ha_create_table (thd=0x7fadd7fbc070, path=0x7fadf8111880 "./test/t1", db=0x7fadc9813738 "test", table_name=0x7fadc9813128 "t1", create_info=0x7fadf8111cb0, frm=0x7fadf8111a90) at 10.0/sql/handler.cc:4613
      #25 0x0000000000760856 in rea_create_table (thd=0x7fadd7fbc070, frm=0x7fadf8111a90, path=0x7fadf8111880 "./test/t1", db=0x7fadc9813738 "test", table_name=0x7fadc9813128 "t1", create_info=0x7fadf8111cb0, file=0x7fadc987d088, no_ha_create_table=false) at 10.0/sql/unireg.cc:409
      #26 0x000000000071dd0b in create_table_impl (thd=0x7fadd7fbc070, db=0x7fadc9813738 "test", table_name=0x7fadc9813128 "t1", path=0x7fadf8111880 "./test/t1", create_info=0x7fadf8111cb0, alter_info=0x7fadf8111c20, create_table_mode=0, is_trans=0x7fadf8111b2f, key_info=0x7fadf8111aa8, key_count=0x7fadf8111aa4, frm=0x7fadf8111a90) at 10.0/sql/sql_table.cc:4706
      #27 0x000000000071e1db in mysql_create_table_no_lock (thd=0x7fadd7fbc070, db=0x7fadc9813738 "test", table_name=0x7fadc9813128 "t1", create_info=0x7fadf8111cb0, alter_info=0x7fadf8111c20, is_trans=0x7fadf8111b2f, create_table_mode=0) at 10.0/sql/sql_table.cc:4817
      #28 0x000000000071e3cc in mysql_create_table (thd=0x7fadd7fbc070, create_table=0x7fadc9813160, create_info=0x7fadf8111cb0, alter_info=0x7fadf8111c20) at 10.0/sql/sql_table.cc:4870
      #29 0x0000000000673c45 in mysql_execute_command (thd=0x7fadd7fbc070) at 10.0/sql/sql_parse.cc:3055
      #30 0x000000000067cf1f in mysql_parse (thd=0x7fadd7fbc070, rawbuf=0x7fadc9813088 "create table t1 (i int)", length=23, parser_state=0x7fadf8112610) at 10.0/sql/sql_parse.cc:6447
      #31 0x000000000066fcec in dispatch_command (command=COM_QUERY, thd=0x7fadd7fbc070, packet=0x7fadd82a2071 "create table t1 (i int)", packet_length=23) at 10.0/sql/sql_parse.cc:1308
      #32 0x000000000066f08e in do_command (thd=0x7fadd7fbc070) at 10.0/sql/sql_parse.cc:1005
      #33 0x0000000000788ed6 in do_handle_one_connection (thd_arg=0x7fadd7fbc070) at 10.0/sql/sql_connect.cc:1379
      #34 0x0000000000788c29 in handle_one_connection (arg=0x7fadd7fbc070) at 10.0/sql/sql_connect.cc:1293
      #35 0x0000000000a2da80 in pfs_spawn_thread (arg=0x7fadd1296170) at 10.0/storage/perfschema/pfs.cc:1853
      #36 0x00007fadf7d46b50 in start_thread (arg=<optimized out>) at pthread_create.c:304
      #37 0x00007fadf6251a7d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112

      revision-id: elenst@wheezy-64.home-20140315125635-4mv83huc3dntadur
      date: 2014-03-15 16:56:35 +0400
      build-date: 2014-03-17 13:20:44 +0400
      revno: 4055
      branch-nick: 10.0

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.