MDEV-5878: Failing assertion: mutex_own(mutex) with innodb_use_fallocate=ON.

Analysis: This was merge error on file fil0fil.cc. fil_system mutex was taken twice because of this.

Fix: Remove unnecessary mutex_enter and fixed the issue with slow posix_fallocate usage.